# specbox

./: .gitignore  .readthedocs.yaml  .zenodo.json  AGENTS.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml  python-publish.yml
specbox/: __init__.py  auxmodule.py  base.py  cli.py  qtmodule.py
specbox/auxmodule/: __init__.py  cutout_download.py  external_redshift.py  pcf_redshift.py
specbox/basemodule/: __init__.py  basemodule.py
specbox/data/: optical_nir_qso_template.fits  optical_nir_qso_template_v1.fits
specbox/data/templates/qso1/: qso_temp_nir_glikman2006_datafile7.txt  ragn_dr1.fits
specbox/data/templates/qso2/: Lusso_2024_compo_SED19.txt  ragn_na.fits  type2_quasar_composite.csv
specbox/docs/: VITUTORIAL.md  conf.py  getting_started.md  index.md  notebooks.md  requirements.txt  spectrum_classes.md
specbox/docs/api/: auxmodule.rst  basemodule.rst  index.rst  qtmodule.rst  specbox.rst
specbox/docs/notebooks/: spec_iraf_example.ipynb
specbox/examples/: example_enhanced_viewer.py  example_sparcl_parquet_viewer.py
specbox/examples/notebooks/: spec_iraf_example.ipynb
specbox/examples/tools/: build_euclid_bgs_rgs_coadd.py  build_euclid_raw_parquet.py  run_pcf_dual_templates.py  validate_euclid_bgs_rgs.py
specbox/qtmodule/: __init__.py  qtfelo.py  qtmodule.py  qtmodule_enhanced.py  qtsir1d.py
tests/: test_aimsz_review.py  test_euclid_dual_pairing.py  test_euclid_parquet.py  test_sparcl_parquet.py  test_terminal_spectrum_logs.py  test_viewer_template_cache.py
