[build-system]
requires = [
  "setuptools>=61",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "specbox"
version = "1.0.1"
description = "A simple tool to manipulate and visualize UV/optical/NIR spectra for astronomical research."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Yuming Fu", email = "fuympku@outlook.com" },
]
urls = { Homepage = "https://github.com/rudolffu/specbox" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "astropy",
  "pyqtgraph",
  "PySide6",
  "specutils",
  "matplotlib",
  "pandas",
  "requests",
  "pillow",
  "astroquery",
]

[project.scripts]
specbox-viewer = "specbox.cli:viewer_cli"
specbox-pcf = "specbox.cli:pcf_cli"
specbox-coadd = "specbox.cli:coadd_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["specbox*"]

[tool.setuptools.package-data]
specbox = ["data/**/*"]
